--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mdwa",
   "version": "2.6.0",
-  "homepage": "https://maebert.github.io/themostdangerouswritingapp/",
+  "homepage": "https://sohan9542.github.io/freewriting",
   "private": true,
   "dependencies": {
     "autoprefixer": "10.4.11",
